--- a/src/AutomatedTests/AutomatedTests.Test/AutomatedTests.Test.csproj
+++ b/src/AutomatedTests/AutomatedTests.Test/AutomatedTests.Test.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <None Include="..\..\chromedriver.exe" Link="chromedriver.exe">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
