--- a/src/AutomatedTests/AutomatedTests.Test/AutomatedTests.Test.csproj
+++ b/src/AutomatedTests/AutomatedTests.Test/AutomatedTests.Test.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <None Include="..\..\chromedriver.exe" Link="chromedriver.exe">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AutomatedTests.BEDCA.Domain\AutomatedTests.BEDCA.Domain.csproj" />
     <ProjectReference Include="..\Selenium.NetCore\Selenium.NetCore.csproj" />
   </ItemGroup>
 
